# simple-inotify

./: .gitignore  README.md  pyproject.toml
simple_inotify/: __init__.py  constants.py  inotify.py
